# JYPAD

./: .gitignore  CMakeLists.txt  CMakeLists.txt.signing.example  FONT_SETUP.md  INSTALL_PLUGDATA.md  README.md  install.sh
.github/workflows/: build.yml
Source/: DataTable.cpp  DataTable.h  DebugLogger.h  FontManager.cpp  FontManager.h  JYPad.cpp  JYPad.h  JYPadEditor.cpp  JYPadEditor.h  NetworkSettingsWindow.cpp  NetworkSettingsWindow.h  OSCDataWindow.cpp  OSCDataWindow.h  PluginEditor.cpp  PluginEditor.cpp.bak  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SourceEditWindow.cpp  SourceEditWindow.h  XYPad_pd.cpp  XYPad_pd.h
build_verify/: Makefile  PlugDataCustomObject_vst3_helper
build_verify/JUCE/: Makefile
build_verify/JUCE/modules/: Makefile
build_verify/JUCE/tools/: Makefile
build_verify/JUCE/tools/modules/: Makefile
build_verify/PlugDataCustomObject_artefacts/AU/JYPad.component/Contents/: Info.plist
build_verify/PlugDataCustomObject_artefacts/Standalone/JYPad.app/Contents/: Info.plist
build_verify/PlugDataCustomObject_artefacts/VST3/JYPad.vst3/Contents/: Info.plist
build_verify/PlugDataCustomObject_artefacts/VST3/JYPad.vst3/Contents/Resources/: moduleinfo.json
release/: AAX_BUILD_GUIDE.md  CLEAR_OLD_DATA.md  CODE_SIGNING_GUIDE.md  FIX_MAC_PERMISSIONS.md  INSTALL.md  README.md  RELEASE_NOTES.md  VERSION.txt  fix_permissions.sh
